--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
     color: white;
 }
 #style-search{
-    float: right;
-    padding-right: 50px;
+    float: center;
+    padding-left: 450px;
     padding-top: 50px;
     
 }
@@ -20,14 +20,18 @@ body{
   grid-gap: 30px;
   margin-left: 150px;
   margin-top: 200px;
-  background-color: white;
+ 
 }
  .food{
- 
+    box-shadow: 5px 5px 5px gray;
+    background-color: blanchedalmond;
     text-align: center; 
+    border-radius: 10px;
+    align-content: center;
+
 }
 .food img{
-    width: 300px;
+    width: 250px;
 }
 .food h3{
     font-size: 20px;
